deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    name: stage-label
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: stage
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 2
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1container
        image: "romankachur/node.js.image:latest"
        resources:
          limits:
            cpu: "350m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: stage
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
      - name: app2container
        image: "romankachur/node.js.image:latest"
        resources:
          limits:
            cpu: "350m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  namespace: stage
spec:
  selector:
    matchLabels:
      app: app3
  replicas: 2
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3container
        image: "romankachur/node.js.image:latest"
        resources:
          limits:
            cpu: "350m"
            memory: "128Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  namespace: stage
  labels:
    app: svc-1
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: stage
  labels:
    app: svc-2
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
  namespace: stage
  labels:
    app: svc-3
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: stage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: app1.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port: 
                  number: 80
    - host: app2.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port: 
                  number: 80
    - host: app3.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port: 
                  number: 80
